remove overflow-x hidden to avoid confliction with full-screen dialog

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,3 @@
-html, body {
-  overflow-x: hidden;
-}
-
 body {
   position: relative;
 
@@ -15,6 +11,7 @@ body {
 }
 
 code {
+  white-space: pre-wrap;
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
